@@ -12,7 +12,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <pogoprotos.version>2.49.6</pogoprotos.version>
-        <pogoprotos.artifactId>pogoprotos</pogoprotos.artifactId>
+        <pogoprotos.artifactId>POGOProtos</pogoprotos.artifactId>
         <protobuf.version>3.11.1</protobuf.version>
         <gamemaster.version>2.48.2-SNAPSHOT</gamemaster.version>
     </properties>
@@ -31,6 +31,12 @@
             <artifactId>protobuf-java-util</artifactId>
             <version>${protobuf.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -43,21 +49,6 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-            <!-- TODO comment for remove warn no thinks this is required
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.1</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-install-plugin</artifactId>
@@ -97,17 +88,19 @@
                     </execution>
                 </executions>
             </plugin>
-        </plugins>
-    </build>
-    <!-- this plugin as no found in maven
-    <reporting>
-        <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jxr-plugin</artifactId>
-                <version>2.3</version>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m
+                        -Djdk.net.URLClassPath.disableClassPathURLCheck=true
+                    </argLine>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
+                </configuration>
             </plugin>
         </plugins>
-    </reporting>
-    -->
-</project>
+    </build>
+ </project>
